Correct nth-child wrapping
nth-child(4n+1): Every 4th starting at the first

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -126,7 +126,7 @@ i {
 }
 
 /* Allow wrapping */
-.icon-items > .row .columns:nth-child(5n+0) {
+.icon-items > .row .columns:nth-child(4n+1) {
   margin-left: 0;
 }
 
